[package]
name = "tooldeck-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"
tooldeck-registry = { path = "../tooldeck-registry" }
# Tool crates — each adds its tools to the registry
tooldeck-json = { path = "../tooldeck-json" }
getrandom = { version = "0.3", features = ["wasm_js"] }